samples/_failures_safe/1761096995_3af7b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a9243e8.c: In function ‘print_token’:
./samples/SAFE/__tmp_5a9243e8.c:170: error: expected ‘{’ at end of input
